@@ -6,7 +6,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: cursor.test,v 1.7 2002/08/31 06:12:31 das Exp $
+# RCS: @(#) $Id: cursor.test,v 1.8 2002/09/03 00:22:37 hobbs Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -103,31 +103,31 @@ test cursor-3.1 {Tk_FreeCursorFromObj - reference counts} {testcursor} {
     button .b3 -cursor $x
     button .b2 -cursor $x
     set result {}
-    lappend result [testcursor arrow]
+    lappend result [testcursor heart]
     destroy .b1
-    lappend result [testcursor arrow]
+    lappend result [testcursor heart]
     destroy .b2
-    lappend result [testcursor arrow]
+    lappend result [testcursor heart]
     destroy .b3
-    lappend result [testcursor arrow]
+    lappend result [testcursor heart]
 } {{{3 1}} {{2 1}} {{1 1}} {}}
 
 test cursor-4.1 {FreeCursorObjProc} {testcursor} {
     destroy .b
-    set x [format arrow]
+    set x [format heart]
     button .b -cursor $x
-    set y [format arrow]
+    set y [format heart]
     .b configure -cursor $y
-    set z [format arrow]
+    set z [format heart]
     .b configure -cursor $z
     set result {}
-    lappend result [testcursor arrow]
+    lappend result [testcursor heart]
     set x red
-    lappend result [testcursor arrow]
+    lappend result [testcursor heart]
     set z 32
-    lappend result [testcursor arrow]
+    lappend result [testcursor heart]
     destroy .b
-    lappend result [testcursor arrow]
+    lappend result [testcursor heart]
     set y bogus
     set result
 } {{{1 3}} {{1 2}} {{1 1}} {}}
